Add check iff draggedmember has permission to do job

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -150,7 +150,7 @@ else
         {
             if (!dayPeriod.Jobs.Any(j => j.UserId == draggedMember.Id))
             {
-                if(draggedMember.Permissions.Any(p => p.Name == job.PermissionName))
+                if(draggedMember.Permissions.Any(p => p.Name == job.Name))
                 {
                     if (!Dropzones.ContainsKey(job.Id.ToString()))
                     {
