--- a/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
@@ -8,6 +8,11 @@
 <div class="container">
     <div class="row">
         <div class="col col-lg-12">
+            @if (Day != null)
+            {
+                <h4>@Day.Date.ToString("ddd d/M")</h4>
+                <h4>@DayPeriod.Name</h4>
+            }
             <h6>Beschikbare/bevoegde leden</h6>
             <button @onclick="e => OnCancel.InvokeAsync()">Cancel</button>
             <div class="mb-3">
@@ -31,7 +36,6 @@
                         @foreach (var user in Staff)
                         {
                             <tr class="userrow">
-                                @*<td id="@user.Id" draggable="true" ondragover="event.preventDefault();" @ondragstart="(e => HandleDragStart(e, user))">@user.Name (@user.Scaling)</td>*@
                                 <td id="@user.Id" draggable="true" ondragover="event.preventDefault();" @ondragstart="(e => OnDragged.InvokeAsync(user))">@user.Name (@user.Scaling)</td>
                             </tr>
                         }
@@ -42,9 +46,6 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="mb-2">
-                <button class="btn btn-primary">Dagdeel toevoegen</button>
-            </div>
             <div>
                 <button class="btn btn-primary">Dienst toevoegen</button>
             </div>
@@ -54,7 +55,6 @@
 
 
 @code {
-    //public List<UserListModel> _users { get; set; } = new List<UserListModel>();
     private List<BaseListModel> _permissions { get; set; } = new List<BaseListModel>();
     [Parameter]
     public List<UserListModel> Staff { get; set; }
@@ -64,6 +64,12 @@
     public EventCallback OnCancel { get; set; }
     [Parameter]
     public EventCallback<UserListModel> OnDragged { get; set; }
+
+    
+    [Parameter]
+    public Day Day { get; set; }
+    [Parameter]
+    public DayPeriod DayPeriod { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
