--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -9,7 +9,7 @@
 
 <form @onsubmit="HandleFile">
 	<InputFile OnChange="LoadFile" />
-	<button type="submit" disabled="@isLoading">Import file</button>
+	<button type="submit" disabled="@isLoading">Importeer ledenlijst</button>
 </form>
 
 <a href="templates/template.xlsx" download>Download template</a>
