--- a/src/Ezac.Roster.Web/Components/Components/MemberPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/MemberPopUp.razor
@@ -34,7 +34,7 @@
             </div>
 
             <div class="mb-2">
-                <button class="btn btn-primary">Cancel</button>
+                <button class="btn btn-primary">Annuleren</button>
                 <button class="btn btn-primary">Ok</button>
             </div>
         </div>
