--- a/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
+++ b/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
@@ -18,13 +18,13 @@
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="excelTest">
-                    <span class="bi bi-cloud-upload-fill-nav-menu" aria-hidden="true"></span> Import users
+                    <span class="bi bi-cloud-upload-fill-nav-menu" aria-hidden="true"></span> Importeer leden
                 </NavLink>
             </div>
   
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="calendarslist">
-                    <span class="bi bi-calendar-nav-menu" aria-hidden="true"></span> Kalenders list
+                    <span class="bi bi-calendar-nav-menu" aria-hidden="true"></span> Kalenderlijst
                 </NavLink>
             </div>
         }
