--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -8,6 +8,7 @@
 
 
 @inject ICalendarService CalendarService
+@inject IUserService UserService
 @inject NavigationManager Navigation
 
 <h3>Alle kalenders</h3>
@@ -36,6 +37,7 @@
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
                         <button class="btn btn-danger btn-sm" @onclick="() => ShowDeletePopUp(calendar.Id)">Verwijderen</button>
                         <button class="btn btn-info btn-sm" @onclick="() => OverviewCalendar(calendar.Id)">Overzicht</button>
+                        @*<button class="btn btn-info btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>*@
                     </td>
                 </tr>
             }
@@ -53,6 +55,8 @@ else
     private List<ApplicationCalendar> calendars;
 
     private ConfirmDeletePopUp DeletePopUp;
+
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -95,4 +99,22 @@ else
     {
         Navigation.NavigateTo($"calendar/{calendarId}");
     }
+
+    //private async Task GenerateUniqueLink(Guid calendarId)
+    //{
+    //    var baseUrl = "https://localhost:44375/userpreferencecalendar";
+    //    var usersResult = await UserService.GetAllAsync();
+
+    //    if (usersResult.IsSucces)
+    //    {
+    //        foreach (var user in usersResult.Value)
+    //        {
+    //            var uniqueLink = $"{baseUrl}/{calendarId}/{user.Id}";
+    //            var subject = "Kalender link";
+    //            var body = $"Hello {user.Name},\n\nHere is your unique calendar link: {uniqueLink}";
+
+    //            await EmailService.SendEmailAsync("kerselaers.mitchell@hotmail.com", subject, body);
+    //        }
+    //    }
+    //}
 }
