Inject the emailservice into calendarlist

--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -9,6 +9,7 @@
 
 @inject ICalendarService CalendarService
 @inject IUserService UserService
+@inject EmailService EmailService
 @inject NavigationManager Navigation
 
 <h3>Alle kalenders</h3>
