Add send button to calenderlist

--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -38,7 +38,7 @@
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
                         <button class="btn btn-danger btn-sm" @onclick="() => ShowDeletePopUp(calendar.Id)">Verwijderen</button>
                         <button class="btn btn-info btn-sm" @onclick="() => OverviewCalendar(calendar.Id)">Overzicht</button>
-                        @*<button class="btn btn-info btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>*@
+                        <button class="btn btn-info btn-sm" @onclick="() => GenerateUniqueLink(calendar.Id)">Link Versturen</button>
                     </td>
                 </tr>
             }
