--- a/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/TestExcelPage.razor
@@ -41,7 +41,7 @@
 
 		if (!(extension.Equals(".xlsx", StringComparison.OrdinalIgnoreCase) || (extension.Equals(".xls", StringComparison.OrdinalIgnoreCase))))
 		{
-			errorMessage = "Upload aan excel bestand!";
+			errorMessage = "Upload een excel bestand!";
 			return;
 		}
 
