Delete all overkill using statements #122

--- a/src/Ezac.Roster.Web/Components/Components/MemberPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/MemberPopUp.razor
@@ -1,7 +1,4 @@
-﻿@using Ezac.Roster.Domain.Models
-@using Ezac.Roster.Domain.Interfaces.Services
-
-@inject IJobService _jobService
+﻿@inject IJobService _jobService
 @inject IDayPeriodService _dayPeriodService
 
 <div class="row justify-content-center">
