--- a/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
@@ -34,6 +34,29 @@
 			}
 		</tbody>
 	</table>
+
+	<form @onsubmit="CreateUser">
+		<div class="form-group">
+			<label for="name">Naam</label>
+			<input type="text" id="name" @bind="Name" class="form-control" required/>
+		</div>
+		<div class="form-group">
+			<label for="email">Email</label>
+			<input type="email" id="email" @bind="Email" class="form-control" required/>
+		</div>
+		<div class="form-group">
+			<label for="scale">Inschaling</label>
+			<input type="number" min="0" step="0.1" id="scale" class="form-control" required @bind="Scaling">
+		</div>
+		@foreach (var permission in permissions)
+		{
+			<div class="form-group">
+				<label for="@permission.Name">@permission.Name</label>
+				<input type="number" min="0" max="10" id="@permission.Name" class="form-control" required @bind="PermissionValues[permission.Id]">
+			</div>
+		}
+		<button type="submit" class="btn btn-primary">Voeg nieuw lid toe</button>
+	</form>
 }
 else
 {
@@ -43,6 +66,11 @@ else
 @code {
 	private List<User> members;
 	private List<Permission> permissions;
+
+	private string Name { get; set; }
+	private string Email { get; set; }
+	private double Scaling { get; set; }
+	private Dictionary<Guid, int> PermissionValues { get; set; } = new Dictionary<Guid, int>();
 
 	protected async override Task OnInitializedAsync()
 	{
@@ -60,10 +88,39 @@ else
 		if (permissionsResult.IsSucces)
 		{
 			permissions = permissionsResult.Value.ToList();
+			foreach (var permission in permissions)
+			{
+				PermissionValues[permission.Id] = 0;
+			}
 		}
 		else
 		{
 			permissions = new List<Permission>();
+		}
+	}
+
+	private async Task CreateUser()
+	{
+		var user = new UserCreateRequestModel
+		{
+			Name = Name,
+			Email = Email,
+			Scaling = Scaling,
+			Permissions = PermissionValues.Select(pv => new UserPermission
+			{
+				PermissionId = pv.Key,
+				Experience = pv.Value
+			}).ToList()
+		};
+
+		var result = await UserService.AddAsync(user);
+		if (result.IsSucces)
+		{
+			StateHasChanged();
+		}
+		else
+		{
+			// Handle error
 		}
 	}
 }
