--- a/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
@@ -1,4 +1,5 @@
 ﻿@page "/members"
+@rendermode InteractiveServer
 
 @inject IUserService UserService
 @inject IPermissionsService PermissionsService
@@ -106,8 +107,11 @@ else
 			Name = Name,
 			Email = Email,
 			Scaling = Scaling,
+			Jobs = new List<Job>(),
+			Preferences = new List<Preference>(),
 			Permissions = PermissionValues.Select(pv => new UserPermission
 			{
+				Id = Guid.NewGuid(),
 				PermissionId = pv.Key,
 				Experience = pv.Value
 			}).ToList()
